--- a/about.html
+++ b/about.html
@@ -10,6 +10,7 @@
       This site is a sample project for the <strong>awesome</strong> Git
       tutorial <em><a href="http://learnenough.com/git-tutorial">Learn Enough™ Git to Be Dangerous</a></em>.
     </p>
+    <a href="index.html">Back home</a>
     <a href="https://www.flickr.com/photos/puliarfanita/22959238329">
       <img src="images/polar_bear.jpg" alt="Polar bear">
     </a>
